k8s/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: interview-tracker-minikube-ingress
  namespace: interview-tracker
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.minikube.local
    secretName: minikube-tls
  rules:
  - host: api.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
